I maked to slide the menu even on the lesser window - resize is working

--- a/frontend/src/components/MoveDown.css
+++ b/frontend/src/components/MoveDown.css
@@ -1,21 +1,12 @@
 .dropdown-menu {
   background: rgb(17, 199, 255);
-    width: 150px;
+    width: 105px;
     position: absolute;
     top: 50px;
     list-style: none;
     text-align: start;
   }
-
-  .dropdown-menu li {
-    background: rgb(17, 199, 255);
-    cursor: pointer;
-  }
   
-  .dropdown-menu li:hover {
-    background: rgb(17, 199, 255);
-  }
-
   .dropdown-link {
     display: block;
     height: 100%;
@@ -23,4 +14,14 @@
     text-decoration: none;
     color: #fff;
     padding: 16px;
+  }
+
+  @media screen and (max-width: 960px) {
+    .dropdown-menu {
+      background: rgb(17, 199, 255);
+        width: 105px;
+        top: 50px;
+        list-style: none;
+        text-align: start;
+      }
   }
