--- a/frontend/src/components/HeaderComp.css
+++ b/frontend/src/components/HeaderComp.css
@@ -14,6 +14,10 @@
     text-decoration: none;
 }
 
+.header-icon {
+  display: none;
+}
+
 .header-menu {
     display: grid;
     grid-template-columns: repeat(5, auto);
