--- a/frontend/src/components/MoveDown.css
+++ b/frontend/src/components/MoveDown.css
@@ -1,4 +1,4 @@
-.dropdown-menu {
+.movedown-menu {
   background: rgb(17, 199, 255);
     width: 105px;
     position: absolute;
@@ -7,7 +7,7 @@
     text-align: start;
   }
   
-  .dropdown-link {
+  .movedown-link {
     display: block;
     height: 100%;
     width: 100%;
@@ -17,7 +17,7 @@
   }
 
   @media screen and (max-width: 960px) {
-    .dropdown-menu {
+    .movedown-menu {
       background: rgb(17, 199, 255);
         width: 105px;
         top: 50px;
