--- a/frontend/src/components/FooterComp.css
+++ b/frontend/src/components/FooterComp.css
@@ -1,5 +1,5 @@
 .footer {
-    background: rgb(17, 199, 255);
+    background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
     color: white;
     position: fixed;
     bottom: 0;
