--- a/frontend/src/components/MoveDown.css
+++ b/frontend/src/components/MoveDown.css
@@ -1,10 +1,13 @@
 .movedown-menu {
-  background: rgb(17, 199, 255);
-    width: 105px;
+  background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
+    width: 150px;
     position: absolute;
     top: 50px;
+    right: 240px;
     list-style: none;
-    text-align: start;
+    text-align: center;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
   }
   
   .movedown-link {
@@ -14,14 +17,20 @@
     text-decoration: none;
     color: #fff;
     padding: 16px;
+    text-align: start;
+    position: relative;
   }
 
   @media screen and (max-width: 960px) {
     .movedown-menu {
-      background: rgb(17, 199, 255);
-        width: 105px;
+        background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
+        position: absolute;
+        width: 150px;
         top: 50px;
+        right: 120px;
         list-style: none;
         text-align: start;
+        border-bottom-right-radius: 5px;
+        border-bottom-left-radius: 5px;
       }
   }
