--- a/frontend/src/components/MoveDownDiabetes.css
+++ b/frontend/src/components/MoveDownDiabetes.css
@@ -1,36 +1,48 @@
-.movedown-menu {
+.movedown-menu-diabetes {
   background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
-    width: 150px;
+    width: 100px;
     position: absolute;
     top: 50px;
-    right: 240px;
+    right: 500px;
     list-style: none;
     text-align: center;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
+    font-family:'Courier New', Courier, monospace;
   }
   
-  .movedown-link {
+  .movedown-link-diabetes {
     display: block;
     height: 100%;
     width: 100%;
     text-decoration: none;
     color: #fff;
-    padding: 16px;
+    padding: 10px;
     text-align: start;
     position: relative;
+    left: -30px;
+  }
+
+  .movedown-link-diabetes:hover {
+    transform: scale(1.1);
+    transition: all 0.2s ease-out;
   }
 
   @media screen and (max-width: 960px) {
-    .movedown-menu {
+    .movedown-menu-diabetes {
         background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
         position: absolute;
-        width: 150px;
+        width: 100px;
         top: 50px;
-        right: 120px;
+        right: 290px;
         list-style: none;
-        text-align: start;
+        text-align: center;
         border-bottom-right-radius: 5px;
         border-bottom-left-radius: 5px;
+        font-family:'Courier New', Courier, monospace;
+      }
+
+      .movedown-link-diabetes {
+        left: -30px;
       }
   }
