--- a/frontend/src/components/MoveDownAdvices.css
+++ b/frontend/src/components/MoveDownAdvices.css
@@ -1,9 +1,9 @@
-.movedown-menu-diabetes {
+.movedown-menu-advices {
   background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
     width: 100px;
     position: absolute;
     top: 50px;
-    right: 480px;
+    right: 490px;
     list-style: none;
     text-align: center;
     border-bottom-right-radius: 5px;
@@ -11,7 +11,7 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
   }
   
-  .movedown-link-diabetes {
+  .movedown-link-advices {
     display: block;
     height: 100%;
     width: 100%;
@@ -23,18 +23,18 @@
     left: -30px;
   }
 
-  .movedown-link-diabetes:hover {
+  .movedown-link-advices:hover {
     transform: scale(1.1);
     transition: all 0.2s ease-out;
   }
 
   @media screen and (max-width: 960px) {
-    .movedown-menu-diabetes {
+    .movedown-menu-advices {
         background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
         position: absolute;
         width: 100px;
         top: 50px;
-        right: 290px;
+        right: 90px;
         list-style: none;
         text-align: center;
         border-bottom-right-radius: 5px;
@@ -42,7 +42,7 @@
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       }
 
-      .movedown-link-diabetes {
+      .movedown-link-advices {
         left: -30px;
       }
   }
