--- a/frontend/src/components/HeaderComp.css
+++ b/frontend/src/components/HeaderComp.css
@@ -10,7 +10,7 @@
 }
 
 .header-logo {
-  margin-left: -20px;
+  margin-left: 10px;
   display: flex;
 }
 
@@ -23,10 +23,10 @@
 .header-menu {
     display: grid;
     grid-template-columns: repeat(5, auto);
-    grid-gap: 150px;
+    grid-gap: 120px;
     width: 90vw;
     justify-content: end;
-    margin-right: 2rem;
+    margin-right: 40rem;
   }
 
   .header-item {
@@ -40,6 +40,44 @@
     transition: all 0.2s ease-out;
   }
 
+  .bn632-hover {
+    width: 130px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin: 22px;
+    height: 35px;
+    text-align:center;
+    border: none;
+    background-size: 300% 100%;
+    border-radius: 50px;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+  
+  .bn632-hover:hover {
+    background-position: 100% 0;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+  
+  .bn632-hover:focus {
+    outline: none;
+  }
+  
+  .bn632-hover.bn26 {
+    background-image: linear-gradient(
+      to right,
+      #25aae1,
+      #4481eb,
+      #04befe,
+      #3f86ed
+    );
+    box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+  }
   @media screen and (max-width: 960px) {
     .header-menu {
       display: grid;
