--- a/frontend/src/components/MoveDownDiabetes.css
+++ b/frontend/src/components/MoveDownDiabetes.css
@@ -32,13 +32,14 @@
     .movedown-menu-diabetes {
         background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
         position: absolute;
-        width: 100px;
+        width: 80px;
         top: 50px;
-        right: 290px;
+        right: 630px;
         list-style: none;
         text-align: center;
         border-bottom-right-radius: 5px;
         border-bottom-left-radius: 5px;
+        font-size: 15px;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       }
 
