--- a/frontend/src/components/MoveDownMedicaments.css
+++ b/frontend/src/components/MoveDownMedicaments.css
@@ -32,13 +32,14 @@
       .movedown-menu-medicaments {
           background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
           position: absolute;
-          width: 100px;
+          width: 68px;
           top: 50px;
-          right: 160px;
+          right: 543px;
           list-style: none;
           text-align: center;
           border-bottom-right-radius: 5px;
           border-bottom-left-radius: 5px;
+          font-size: 15px;
           font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
   
