--- a/frontend/src/components/MoveDownDiabetes.css
+++ b/frontend/src/components/MoveDownDiabetes.css
@@ -1,9 +1,9 @@
 .movedown-menu-diabetes {
   background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
-    width: 100px;
+    width: 110px;
     position: absolute;
     top: 50px;
-    right: 1439px;
+    right: 1455px;
     list-style: none;
     text-align: center;
     border-bottom-right-radius: 5px;
@@ -20,7 +20,7 @@
     padding: 10px;
     text-align: start;
     position: relative;
-    left: -30px;
+    font-size: 15px;
   }
 
   .movedown-link-diabetes:hover {
@@ -32,9 +32,9 @@
     .movedown-menu-diabetes {
         background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
         position: absolute;
-        width: 80px;
+        width: 85px;
         top: 50px;
-        right: 630px;
+        right: 645px;
         list-style: none;
         text-align: center;
         border-bottom-right-radius: 5px;
@@ -44,6 +44,6 @@
       }
 
       .movedown-link-diabetes {
-        left: -30px;
+        font-size: 12px;
       }
   }
