--- a/frontend/src/components/Body.css
+++ b/frontend/src/components/Body.css
@@ -3,9 +3,18 @@
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: -1;
     display: flex;
     opacity: 0.5;
+}
+
+.body-container {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 960px) {
@@ -18,4 +27,5 @@
       object-fit: cover;
       opacity: 0.5;
     }
+
 }
