--- a/frontend/src/components/Body.css
+++ b/frontend/src/components/Body.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 100%;
     position: fixed;
+    z-index: -1;
     display: flex;
     opacity: 0.5;
 }
@@ -15,6 +16,31 @@
   justify-content: center;
   align-items: center;
   object-fit: cover;
+}
+
+.body-container > h1 {
+  margin-top: -270px;
+  color: darkgray;
+  white-space: nowrap;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2em;
+  font-family: sans-serif;
+  letter-spacing: 0.2em;
+  transition: 0.3s;
+  text-shadow: 1px 1px 0 grey, 1px 2px 0 grey, 1px 3px 0 grey, 1px 4px 0 grey,
+    1px 5px 0 grey, 1px 6px 0 grey, 1px 7px 0 grey, 1px 8px 0 grey,
+    5px 13px 15px grey;
+}
+
+.body-container > h1:hover {
+  transition: 0.3s;
+  transform: scale(1.01) translate(-50%, -50%);
+  text-shadow: 1px -1px 0 grey, 1px -2px 0 grey, 1px -3px 0 grey,
+    1px -4px 0 grey, 1px -5px 0 grey, 1px -6px 0 grey, 1px -7px 0 grey,
+    1px -8px 0 grey, 5px -13px 15px black, 5px -13px 25px #808080;
 }
 
 @media screen and (max-width: 960px) {
