--- a/frontend/src/components/HeaderComp.css
+++ b/frontend/src/components/HeaderComp.css
@@ -6,7 +6,8 @@
     align-items: center;
     font-size: 2;
     position: sticky;
-    top: 0;
+    top: 0;    
+    z-index: 2;
 }
 
 .header-logo {
