--- a/frontend/src/components/Body.css
+++ b/frontend/src/components/Body.css
@@ -9,9 +9,10 @@
 }
 
 .body-container {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
+  position: fixed;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -19,28 +20,27 @@
 }
 
 .body-container > h1 {
-  margin-top: -270px;
-  color: darkgray;
+  margin-top: -330px;
+  color: rgb(12, 112, 194);
   white-space: nowrap;
   position: absolute;
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 2em;
+  font-weight: 800;
   font-family: sans-serif;
   letter-spacing: 0.2em;
   transition: 0.3s;
   text-shadow: 1px 1px 0 grey, 1px 2px 0 grey, 1px 3px 0 grey, 1px 4px 0 grey,
-    1px 5px 0 grey, 1px 6px 0 grey, 1px 7px 0 grey, 1px 8px 0 grey,
-    5px 13px 15px grey;
+    1px 5px 0 grey, 1px 6px 0 grey, 1px 7px 0 grey;
 }
 
 .body-container > h1:hover {
   transition: 0.3s;
   transform: scale(1.01) translate(-50%, -50%);
   text-shadow: 1px -1px 0 grey, 1px -2px 0 grey, 1px -3px 0 grey,
-    1px -4px 0 grey, 1px -5px 0 grey, 1px -6px 0 grey, 1px -7px 0 grey,
-    1px -8px 0 grey, 5px -13px 15px black, 5px -13px 25px #808080;
+    1px -4px 0 grey, 1px -5px 0 grey, 1px -6px 0 grey, 1px -7px 0 grey;
 }
 
 @media screen and (max-width: 960px) {
@@ -54,4 +54,20 @@
       opacity: 0.5;
     }
 
+    .body-container > h1 {
+      margin-top: -330px;
+      color: rgb(12, 112, 194);
+      white-space: nowrap;
+      position: absolute;
+      top: 45%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 1.8em;
+      font-weight: 800;
+      font-family: sans-serif;
+      letter-spacing: 0.1em;
+      transition: 0.3s;
+      text-shadow: 1px 1px 0 grey, 1px 2px 0 grey, 1px 3px 0 grey, 1px 4px 0 grey,
+        1px 5px 0 grey, 1px 6px 0 grey, 1px 7px 0 grey;
+    }
 }
