--- a/frontend/src/components/Body.css
+++ b/frontend/src/components/Body.css
@@ -24,8 +24,8 @@
   border: 3px solid #25aae1;
   position: fixed;
   top: 50%;
-  left: 15%;
-  height: 600px;
+  left: 13%;
+  height: 500px;
   width: 350px;
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -34,10 +34,18 @@
 }
 
 .photo_cards {
-  height: 100px;
-  width: 100px;
+  height: 300px;
+  width: 300px;
   position:relative;
-  top: 65%;
+  top: 9%;
+  border: 3px solid #25aae1;
+  border-radius: 10px;
+  opacity: 0.9;
+  transition: all 0.5s ease;
+}
+
+.photo_cards:hover {
+  transform: scale(0.9);
 }
 
 h1 {
@@ -47,12 +55,13 @@ h1 {
   text-align: center;
   font-family: 'Raleway',sans-serif;
   color: #ffffff;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 h1::after {
   position: absolute;
   width: 45%;
-  top: 11%;
+  top: 13%;
   left: 33%;
   margin-left: -5.5%;
   content: '';
@@ -61,6 +70,15 @@ h1::after {
 
 .dynamic-text-shadow {
   text-shadow: .1em .2em .1em hsl(200 50% 30%);
+}
+
+p {
+  color: #eee; 
+  font-family: 'Droid Sans', sans-serif; 
+  font-size: 18px; 
+  font-weight: 800; 
+  line-height: 24px; 
+  margin: 0 0 14px; 
 }
 
 
