--- a/frontend/src/components/Body.css
+++ b/frontend/src/components/Body.css
@@ -37,7 +37,7 @@
   height: 300px;
   width: 300px;
   position:relative;
-  top: 9%;
+  top: 11%;
   border: 3px solid #25aae1;
   border-radius: 10px;
   opacity: 0.9;
@@ -49,7 +49,7 @@
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 30px;
   font-weight: 800;
   line-height: 2;
   text-align: center;
