--- a/frontend/src/components/Body.css
+++ b/frontend/src/components/Body.css
@@ -24,9 +24,51 @@
   border: 5px solid #25aae1;
   position: fixed;
   top: 50%;
-  left: 13%;
-  height: 500px;
-  width: 350px;
+  left: 200px;
+  height: 600px;
+  width: 380px;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  text-align: center;
+  backdrop-filter: blur(5px);
+}
+
+.cards_image2 {
+  background-color: rgba(0,0,0, 0.4);
+  border: 5px solid #25aae1;
+  position: fixed;
+  top: 50%;
+  left: 635px;
+  height: 600px;
+  width: 380px;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  text-align: center;
+  backdrop-filter: blur(5px);
+}
+
+.cards_image3 {
+  background-color: rgba(0,0,0, 0.4);
+  border: 5px solid #25aae1;
+  position: fixed;
+  top: 50%;
+  left: 1070px;
+  height: 600px;
+  width: 380px;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  text-align: center;
+  backdrop-filter: blur(5px);
+}
+
+.cards_image4 {
+  background-color: rgba(0,0,0, 0.4);
+  border: 5px solid #25aae1;
+  position: fixed;
+  top: 50%;
+  left: 1505px;
+  height: 600px;
+  width: 380px;
   transform: translate(-50%, -50%);
   z-index: 1;
   text-align: center;
@@ -34,8 +76,8 @@
 }
 
 .photo_cards {
-  height: 300px;
-  width: 300px;
+  height: 400px;
+  width: 350px;
   position:relative;
   top: 11%;
   border: 3px solid #25aae1;
