--- a/frontend/src/components/FooterComp.css
+++ b/frontend/src/components/FooterComp.css
@@ -11,3 +11,39 @@
     display: flex;
     font-size: 13px;
 }
+
+ .footer-button-contact.btn {
+    width: 110px;
+    height: 35px;
+    position: relative;
+    left: 500px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    background-size: 200% 100%;
+    border-radius: 20px;
+  }
+  
+  .footer-button-contact.btn:hover {
+    background-position: 100% 0;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+  
+  .footer-button-contact.btn:focus {
+    outline: none;
+  }
+  
+  .footer-button-contact.btn.btn {
+    background-image: linear-gradient(
+      to right,
+      #25aae1,
+      #4481eb,
+      #04befe,
+      #3f86ed
+    );
+    box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+  }
