--- a/frontend/src/components/Contact.css
+++ b/frontend/src/components/Contact.css
@@ -1,6 +1,85 @@
+.background-image-contact {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+  display: flex;
+  opacity: 0.5;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 .name-holder {
     position: relative;
     left: 45%;
-    bottom: -50px;
+    bottom: -60px;
+    opacity: 0.7;
+
+}
+
+.email-holder {
+    position: relative;
+    left: 45%;
+    bottom: -80px;
     opacity: 0.7;
 }
+
+.text-holder {
+    position: relative;
+    left: 45%;
+    bottom: -100px;
+    opacity: 0.7;
+}
+
+.form-holder {
+    position: relative;
+    left: 35%;
+    bottom: -150px;
+    opacity: 0.7;
+}
+
+.submit-holder {
+    position: relative;
+    left: 60%;
+    bottom: -180px;
+    opacity: 1;
+}
+
+.header-button-sub {
+    width: 110px;
+    height: 35px;
+    position: relative;
+    right: 210px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    background-size: 200% 100%;
+    border-radius: 20px;
+  }
+  
+  .header-button-sub:hover {
+    background-position: 100% 0;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+  
+  .header-button-sub:focus {
+    outline: none;
+  }
+  
+  .header-button-sub.btn {
+    background-image: linear-gradient(
+      to right,
+      #25aae1,
+      #4481eb,
+      #04befe,
+      #3f86ed
+    );
+    box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+  }
