--- a/frontend/src/components/HeaderComp.css
+++ b/frontend/src/components/HeaderComp.css
@@ -1,6 +1,7 @@
 .header {
     background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
     height: 50px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,8 +15,6 @@
   margin-left: 10px;
   display: flex;
 }
-
-
 
 .header-links {
     color: white;
