--- a/frontend/src/components/Calculator.css
+++ b/frontend/src/components/Calculator.css
@@ -22,10 +22,32 @@
   }
 
   .calculator-desc-1 {
-    font-size: 1.5em;
+    font-size: 1.8em;
     margin-top: 4.0em;
-    margin-left: 10em;
+    margin-left: 9em;
     font-weight: 400;
     color: rgb(0, 0, 0);
     cursor:default;
+  }
+
+  .calculator-desc-2 {
+    font-size: 1.2em;
+    margin-top: 1em;
+    margin-left: 11em;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
+    cursor:default;
+  }
+  
+  textarea {
+    position: relative;
+    top: 10px;
+    left: 3px;
+    width: 35px;
+    height: 30px;
+    cursor: text;
+    resize: none;
+    font-size: 15px;
+    padding-top: 5px;
+    padding-left: 5px;
   }
