--- a/frontend/src/components/Calculator.css
+++ b/frontend/src/components/Calculator.css
@@ -60,3 +60,45 @@
     padding-top: 5px;
     padding-left: 5px;
   }
+
+  .first-breakfast {
+    position: relative;
+    top: 40px;
+    left: 45px;
+    width: 35px;
+    height: 30px;
+    cursor: text;
+    resize: none;
+    font-size: 15px;
+    padding-top: 5px;
+    padding-left: 5px;
+  }
+  .first-breakfast-position {
+    font-size: 0.78em;
+    margin-top: -0.6em;
+    margin-left: -3em;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
+    cursor:default;
+  }
+
+  .second-breakfast {
+    position: relative;
+    top: 15px;
+    left: 117px;
+    width: 35px;
+    height: 30px;
+    cursor: text;
+    resize: none;
+    font-size: 15px;
+    padding-top: 5px;
+    padding-left: 5px;
+  }
+  .second-breakfast-position {
+    font-size: 0.78em;
+    margin-top: -0.8em;
+    margin-left: -3em;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
+    cursor:default;
+  }
