--- a/frontend/src/components/Calculator.css
+++ b/frontend/src/components/Calculator.css
@@ -11,7 +11,7 @@
 .h2-calc {
     color: white;
     position: relative;
-    left: 800px;
+    left: 700px;
     text-shadow: .1em .2em .1em hsl(200 50% 30%);
     font-size: 20px;
     font-weight: 800;
@@ -24,7 +24,7 @@
   .calculator-desc-1 {
     font-size: 1.8em;
     margin-top: 4.0em;
-    margin-left: 9em;
+    margin-left: 14.5em;
     font-weight: 400;
     color: rgb(0, 0, 0);
     cursor:default;
@@ -33,7 +33,7 @@
   .calculator-desc-2 {
     font-size: 1.2em;
     margin-top: 1em;
-    margin-left: 11em;
+    margin-left: 20em;
     font-weight: 400;
     color: rgb(0, 0, 0);
     cursor:default;
@@ -42,7 +42,16 @@
   .calculator-desc-3 {
     font-size: 1.6em;
     margin-top: 1em;
-    margin-left: 11.2em;
+    margin-left: 17.5em;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
+    cursor:default;
+  }
+
+  .calculator-desc-4 {
+    font-size: 1.8em;
+    margin-top: -1.3em;
+    margin-left: 38em;
     font-weight: 400;
     color: rgb(0, 0, 0);
     cursor:default;
