--- a/frontend/src/components/Nutrition.css
+++ b/frontend/src/components/Nutrition.css
@@ -27,7 +27,9 @@
 
   .p-nutrition {
     color: rgb(255, 255, 255);
-    position: absolute;
+    position: relative;
+    padding-top: 5px;
+    padding-left: 6px;
     font-weight: 200;
   }
 
