--- a/frontend/src/components/Calculator.css
+++ b/frontend/src/components/Calculator.css
@@ -194,6 +194,7 @@
     padding-left: 5px;
     border-radius: 5px;
   }
+
   .second-dinner-position {
     font-size: 0.78em;
     margin-top: -0.8em;
@@ -201,4 +202,27 @@
     font-weight: 400;
     color: rgb(0, 0, 0);
     cursor:default;
+  }
+
+   .sugar-position {
+    position:fixed;
+    bottom: 580px;
+    padding-left: 900px;
+    font-size: 20px;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
+  }
+
+  .sugar {
+    position: relative;
+    bottom: 380px;
+    left: 1130px;
+    width: 50px;
+    height: 30px;
+    cursor: text;
+    resize: none;
+    font-size: 15px;
+    padding-top: 5px;
+    padding-left: 5px;
+    border-radius: 5px;
   }
