--- a/frontend/src/components/Calculator.css
+++ b/frontend/src/components/Calculator.css
@@ -65,7 +65,7 @@
     height: 30px;
     cursor: text;
     resize: none;
-    font-size: 15px;
+    font-size: 16px;
     padding-top: 2px;
     padding-left: 9px;
     border-radius: 5px;
@@ -79,7 +79,7 @@
     height: 30px;
     cursor: text;
     resize: none;
-    font-size: 15px;
+    font-size: 16px;
     padding-top: 3px;
     padding-left: 5px;
     border-radius: 5px;
@@ -101,7 +101,7 @@
     height: 30px;
     cursor: text;
     resize: none;
-    font-size: 15px;
+    font-size: 16px;
     padding-top: 5px;
     padding-left: 5px;
     border-radius: 5px;
@@ -123,7 +123,7 @@
     height: 30px;
     cursor: text;
     resize: none;
-    font-size: 15px;
+    font-size: 16px;
     padding-top: 5px;
     padding-left: 5px;
     border-radius: 5px;
@@ -145,7 +145,7 @@
     height: 30px;
     cursor: text;
     resize: none;
-    font-size: 15px;
+    font-size: 16px;
     padding-top: 5px;
     padding-left: 5px;
     border-radius: 5px;
@@ -167,7 +167,7 @@
     height: 30px;
     cursor: text;
     resize: none;
-    font-size: 15px;
+    font-size: 16px;
     padding-top: 5px;
     padding-left: 5px;
     border-radius: 5px;
@@ -189,7 +189,7 @@
     height: 30px;
     cursor: text;
     resize: none;
-    font-size: 15px;
+    font-size: 16px;
     padding-top: 5px;
     padding-left: 5px;
     border-radius: 5px;
@@ -208,21 +208,52 @@
     position:fixed;
     bottom: 580px;
     padding-left: 900px;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 400;
     color: rgb(0, 0, 0);
   }
 
   .sugar {
     position: relative;
-    bottom: 398px;
-    left: 1130px;
+    bottom: 380px;
+    left: 1140px;
     width: 50px;
     height: 30px;
     cursor: text;
     resize: none;
-    font-size: 15px;
+    font-size: 16px;
     padding-top: 5px;
     padding-left: 5px;
     border-radius: 5px;
+  }
+
+  .sugar-too-high {
+    position: relative;
+    bottom: 370px;
+    left: 895px;
+    font-size: 15px;
+    padding-top: 5px;
+    padding-left: 5px;
+    font-size: 22px;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
+  }
+
+  .right-arrow {
+    position:relative;
+    bottom: 440px;
+    left: 1230px;
+    height: 50px;
+    width: 100px;
+  }
+
+  .result-of-sugar-calc {
+    position: relative;
+    bottom: 500px;
+    left: 1400px;
+    padding-top: 5px;
+    padding-left: 5px;
+    font-size: 45px;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
   }
