--- a/frontend/src/components/Converters.css
+++ b/frontend/src/components/Converters.css
@@ -19,50 +19,51 @@
   .first-table {
     position:relative;
     top: 0px;
-    left: 1150px;
+    left: 1220px;
   }
 
   .second-table {
     position:relative;
-    left: 1250px;
+    left: 1370px;
   }
 
   .third-table {
     position:relative;
-    top: 310px;
-    left: -50px;
+    top: 350px;
+    left: -80px;
   }
 
   .fourth-table {
     position:relative;
-    top: 310px;
-    right: -50px;
+    top: 350px;
+    right: -70px;
   }
 
   .fifth-table {
     position:relative;
-    top: 620px;
-    right: 1250px;
+    top: 700px;
+    right: 1380px;
   }
 
   .sixth-table {
     position:relative;
-    top: 620px;
-    right: 1150px;
+    top: 700px;
+    right: 1230px;
   }
 
   table {
     position: relative;
-    border: 2px solid rgb(8, 157, 243);
-    width: 600px;
-    height: 250px;
+    border: 3px solid rgb(8, 157, 243);
+    width: 650px;
+    height: 300px;
     bottom: 260px;
-    background-color: rgba(15, 14, 13, 0.404);
+    background-color: rgba(15, 14, 13, 0.397);
     margin-top: 20px;
+    border-radius: 15px;
   }
     
   th {
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
   }
     
   td {
