--- a/frontend/src/components/Home/Body.css
+++ b/frontend/src/components/Home/Body.css
@@ -8,7 +8,7 @@
   opacity: 0.5;
 }
 
-.cards_image {
+.cards-image-information {
   background-color: rgba(0,0,0, 0.4);
   border: 4px solid #25aae1;
   position: fixed;
@@ -22,7 +22,7 @@
   backdrop-filter: blur(5px);
 }
 
-.cards_image2 {
+.cards-image-food {
   background-color: rgba(0,0,0, 0.4);
   border: 4px solid #25aae1;
   position: fixed;
@@ -36,7 +36,7 @@
   backdrop-filter: blur(5px);
 }
 
-.cards_image3 {
+.cards-image-calculator {
   background-color: rgba(0,0,0, 0.4);
   border: 4px solid #25aae1;
   position: fixed;
@@ -50,7 +50,7 @@
   backdrop-filter: blur(5px);
 }
 
-.cards_image4 {
+.cards-image-login {
   background-color: rgba(0,0,0, 0.4);
   border: 4px solid #25aae1;
   position: fixed;
